<resources>
    <string name="app_name">TodoApp</string>

    <!--Login Res-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="task_title">Task Title</string>
    <string name="enter_task_title">Enter Task title</string>
    <string name="task_description">Task Description</string>
    <string name="enter_your_task_description">Enter your Task Description</string>
    <string name="set_reminder_date_and_time">Set reminder date and time</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="save_task">Save Task</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
</resources>
